--- a/index.html
+++ b/index.html
@@ -7,29 +7,26 @@
 </head>
 
 <body>
+    <div id="case">
     <div id="screen"></div>
-    <div>
-    <button>9</button>
-    <button>8</button>
-    <button>7</button>
-    </div><div>
-    <button>6</button>
-    <button>5</button>
-    <button>4</button>
-    </div><div>
-    <button>3</button>
-    <button>2</button>
-    <button>1</button>
-    </div><div>
-    <button>0</button>
+    <button class="largeButtons operations">backspace</button>
+    <button class="largeButtons operations">clear</button>
+    <button class="buttons operations">/</button>
+    <button class="buttons">7</button>
+    <button class="buttons">8</button>
+    <button class="buttons">9</button>
+    <button class="buttons operations">*</button>
+    <button class="buttons">4</button>
+    <button class="buttons">5</button>
+    <button class="buttons">6</button>
+    <button class="buttons operations">-</button>
+    <button class="buttons">1</button>
+    <button class="buttons">2</button>
+    <button class="buttons">3</button>
+    <button class="buttons operations">+</button>
+    <button class="largeButtons">0</button>
+    <button class="largeButtons operations">.</button>
+    <button class="buttons operations">=</button>
     </div>
-    <button>+</button>
-    <button>-</button>
-    <button>*</button>
-    <button>/</button>
-    <button>=</button>
-    <button>delete</button>
-    <button>clear</button>
 </body>
 </html>
-
